--- a/pom.xml
+++ b/pom.xml
@@ -1,42 +1,65 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
            xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
+<parent>
     <groupId>com.calci.app</groupId>
     <artifactId>cal</artifactId>
     <version>1.0.0</version>
-   <dependencies>
-
-<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
-<dependency>
+    <relativepath/> <!-- lookup parent from repository-->
+    </parent>
     <groupId>org.junit.jupiter</groupId>
     <artifactId>junit-jupiter-api</artifactId>
-    <version>5.8.2</version>
-    <scope>test</scope>
-</dependency>
-
+    <version>0.0.1-SNAPSHOT</version>
+    <name>devops-integration</name>
+    <description>Demo project for Spring Boot</description>
+	<properties>
+		<java.version>1.8</java.version>
+	</properties>
+	<dependencies>
 <dependency>
+   <dependency>
    <groupId>org.junit.platform</groupId>
     <artifactId>junit-jupiter-suite-enginre</artifactId>
-    <version>1.8.2</version>
-    <scope>test</scope>
+    </dependency>
    
-</dependency>
- </dependencies>
-
+<dependency>
+			<groupId>org.junit.platfrom</groupId>
+			<artifactId>junit-jupiter-api-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+<dependency>
+			<groupId>org.junit.platfrom</groupId>
+			<artifactId>junit-jupiter-api-actuator</artifactId>
+		</dependency>
+	</dependencies>
 <build>
-        <plugins>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-surefire-plugin</artifactId>
-              <version>3.0.0-M5</version>
-             <configuration>
-                  <test>
-                   com.calci.app.Testcal
-                   </test>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+		<plugins>
+
+			<plugin>
+				<groupId>org.junit.platfrom</groupId>
+				<artifactId>junit-jupiter-maven-plugin</artifactId>
+			</plugin>
+
+			<plugin>
+				<groupId>org.junit.platfrom</groupId>
+				<artifactId>junit-jupiter-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>build-info</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>pl.project13.maven</groupId>
+				<artifactId>git-commit-id-plugin</artifactId>
+			</plugin>
+		</plugins>
+		<finalName>devops-integration</finalName>
+	</build>
+
 </project>
