--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
             <target>1.7</target>
         </configuration>
     </plugin>
+</plugins>
 </build>
  </project>
 		
