--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
         </configuration>
     </plugin>
 </plugins>
+	<finalname>devops</finalname>
 </build>
  </project>
 		
