--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <version>5.8.2</version>
     <scope>test</scope>
 </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.maven/maven-plugin-api -->
+<dependency>
+    <groupId>org.apache.maven</groupId>
+    <artifactId>maven-plugin-api</artifactId>
+    <version>2.0</version>
+</dependency>
+
 <dependency>
     <groupId>org.junit.platform</groupId>
     <artifactId>junit-platform-suite-engine</artifactId>
