--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,11 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <artifactId>maven-plugin-api</artifactId>
     <version>2.0</version>
 </dependency>
-
+<!-- https://mvnrepository.com/artifact/org.apache.maven/maven-plugin-api -->
 <dependency>
-    <groupId>org.junit.platform</groupId>
-    <artifactId>junit-platform-suite-engine</artifactId>
-    <version>1.8.2</version>
-    <scope>test</scope>
+    <groupId>org.apache.maven</groupId>
+    <artifactId>maven-plugin-api</artifactId>
+    <version>2.0</version>
 </dependency>
 </dependencies>
  </project>
