--- a/pom.xml
+++ b/pom.xml
@@ -15,17 +15,34 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <version>5.8.2</version>
     <scope>test</scope>
 </dependency>
-    <!-- https://mvnrepository.com/artifact/org.apache.maven/maven-plugin-api -->
 <dependency>
-    <groupId>org.apache.maven</groupId>
-    <artifactId>maven-plugin-api</artifactId>
-    <version>2.0</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/org.apache.maven/maven-plugin-api -->
-<dependency>
-    <groupId>org.apache.maven</groupId>
-    <artifactId>maven-plugin-api</artifactId>
-    <version>2.0</version>
+    <groupId>org.junit.platform</groupId>
+    <artifactId>junit-platform-suite-engine</artifactId>
+    <version>1.8.2</version>
+    <scope>test</scope>
 </dependency>
 </dependencies>
- </project>
+<build>
+<plugins>
+<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+  <configuration>
+            <source>1.7</source>
+            <target>1.7</target>
+        </configuration>
+    </plugin>
+<plugin>
+
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>3.0.0-M5</version>
+    <configuration>
+    <test>
+    com.testcal.app.testcal
+    </test>
+    </configuration>
+</plugin>
+</plugins>
+</build>
+ </project>
