--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
     </plugin>
 </plugins>
 <plugin>
-
+<plugins>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-surefire-plugin</artifactId>
     <version>3.0.0-M5</version>
@@ -43,6 +43,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
     com.testcal.app.testcal
     </test>
     </configuration>
+</plugins>
 </plugin>
 </build>
  </project>
